# Schaltplan-Editor

./: LICENSE.md  README.md  bauteile.js  build.mjs  editor.js  index.html  main.js  modul_kontakte.js  modul_sicherungen.js  modul_verbindungen.js  modul_verbraucher.js  package-lock.json  package.json  pages.js  registry.js  style.css  ui.js  verkabelung.js
.github/workflows/: tauri-build.yml
src-tauri/: Cargo.toml  innosetup.iss  tauri.conf.json
src-tauri/icons/: icon.icns
